--- a/Core/RentCar.Application/RentCar.Application.csproj
+++ b/Core/RentCar.Application/RentCar.Application.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Frontends\RentCar.Dto\RentCar.Dto.csproj" />
     <ProjectReference Include="..\RentCar.Domain\RentCar.Domain.csproj" />
+
   </ItemGroup>
 
   <ItemGroup>
